--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/*.App {
   text-align: center;
 }
 
@@ -35,4 +35,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+*/
+
+body{
+  width: 100%;
+  font-family: "Google Sans",Arial,sans-serif;
+  color: white;
+  display: flex;
+  place-content: center;
+  text-align: center;
+}
+
+.big-text{
+  font-size: 20px; 
 }
