--- a/src/components/FilterButton/FilterButton.css
+++ b/src/components/FilterButton/FilterButton.css
@@ -9,9 +9,54 @@
     justify-content: center;
 }
 
-.cocktail-card_block{
+.cocktail-card-block{
     display: flex;
     width: 100%;
     flex-direction: column;
     place-content: center;
+}
+
+.cocktail-card-block label {
+    font-size: 20px;
+    padding: 20px;
+}
+
+.search-block span {
+    font-size: 20px;
+}
+
+.search-text{
+    font-size: 20px;   
+    padding: 20px;
+}
+
+.search-block{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+.search-block input {
+    margin-top: 10px;
+    width: 180px;
+    height: 20px;
+}
+
+.with-without-block{
+    display: flex;
+    width:30%;
+    justify-content: space-evenly;
+}
+
+.with-without-block button{
+    background-color: transparent;
+    border: none;
+    color: antiquewhite;
+    font-size: 20px;
+    padding-top: 20px;
+}
+
+.with-without-block button:hover{
+    color: rgb(255, 123, 75);
 }
