--- a/src/components/HomeButton/HomeButton.css
+++ b/src/components/HomeButton/HomeButton.css
@@ -5,7 +5,15 @@
     position: absolute;
     left: 10px;
     top: 20px;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     z-index: 0;
+    background-color: transparent;
+    border: none;
 }
+
+.home-button i{
+    color: white;
+    font-size: 25px;
+}
+
