--- a/src/components/SearchType/SearchType.css
+++ b/src/components/SearchType/SearchType.css
@@ -1,17 +1,22 @@
 
-.cocktail-card_block{
+.search-type-block{
     display:flex;
     flex-direction: column;
 }
 
-.cocktail-card_block button{
+.search-type-block button{
     background-color: transparent;
     border: none;
     color: antiquewhite;
     font-size: 20px;
-    margin-top: 5px;
+    padding-top: 20px;
 }
 
-.cocktail-card_block button:hover{
+.search-type-block button:hover{
     color: rgb(255, 123, 75);
 }
+
+.big-text{
+    font-size: 20px; 
+    padding-bottom: 20px;
+  }
